# smplsynth

./: Cargo.toml
src/: audio.rs  main.rs  midi.rs  plugins.rs  plugins1.rs  ui.rs
