[package]
name = "synth-sampler"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
cpal = "0.15"
midir = "0.10"
rtrb = "0.3"

# Sample loading
symphonia = { version = "0.5", features = ["mp3", "ogg", "wav", "flac", "pcm", "aac"] }
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
