[package]
name = "synth-sampler"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
cpal = "0.15"
midir = "0.10"
rtrb = "0.3"

# Sample loading
symphonia = { version = "0.5", features = ["mp3", "ogg", "wav", "flac", "pcm", "aac"] }
rfd = "0.14"

# CLAP plugin hosting
clack-host = { git = "https://github.com/prokopyl/clack", package = "clack-host" }
clack-extensions = { git = "https://github.com/prokopyl/clack", package = "clack-extensions" }


[profile.release]
opt-level = 3
lto = true
